objects/AcctSeed__Payment_Proposal__c/AcctSeed__Payment_Proposal__c.object-meta.xml
<CustomObject>
    <label>Payment Proposal</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Payment Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>