objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Proposals</relationshipLabel>
    <relationshipName>Payment_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>