objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Advanced_Search__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Advanced_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, the search criteria on this payment proposal will be superseded by the results of a Salesforce report.</inlineHelpText>
    <label>Advanced Search</label>
    <type>Checkbox</type>
</CustomField>