objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Aggregate_by_Payee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Aggregate_by_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to aggregate payments by Payee. For example, if you are paying 5 Payables to the same Vendor, and you wish to send the Vendor a single payment, check this box.</inlineHelpText>
    <label>Aggregate by Payee</label>
    <type>Checkbox</type>
</CustomField>