objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Alternate_Payee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Alternate_Payee__c</fullName>
    <label>Alternate Payee</label>
    <length>140</length>
    <type>Text</type>
</CustomField>