objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Bank_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_GL_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Enter the bank-enabled GL Account for the payment proposal.</inlineHelpText>
    <label>Bank GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Payment Proposals</relationshipLabel>
    <relationshipName>Payment_Proposals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>