objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Cash_Disbursement_Batch__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cash_Disbursement_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Disbursement Batch</label>
    <referenceTo>AcctSeed__Cash_Disbursement_Batch__c</referenceTo>
    <relationshipLabel>Payment Proposals</relationshipLabel>
    <relationshipName>Payment_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>