objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Conditions_Met__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Conditions_Met__c</fullName>
    <label>Conditions Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>