objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select a ledger.</inlineHelpText>
    <label>Ledger</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ledger on the Payment Proposal must be an Active Primary Ledger</errorMessage>
        <filterItems>
            <field>AcctSeed__Ledger__c.AcctSeed__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>AcctSeed__Ledger__c.AcctSeed__Is_Shadow__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Payment Proposals</relationshipLabel>
    <relationshipName>Payment_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>