objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__On_Hold__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to include Payables that are On Hold, but note these will not be eligible for payment since they’re On Hold.</inlineHelpText>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>