objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payable_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable_Name__c</fullName>
    <label>Payable Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>