objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payable_Name_Operator__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payable_Name_Operator__c</fullName>
    <label>Payable Name Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Operator</valueSetName>
    </valueSet>
</CustomField>