objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payee_Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Reference__c</fullName>
    <label>Payee Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>