objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payee_Reference_Operator__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Reference_Operator__c</fullName>
    <label>Payee Reference Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Operator</valueSetName>
    </valueSet>
</CustomField>