objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Date__c</fullName>
    <inlineHelpText>Select the date on which you want the payments recorded.</inlineHelpText>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>