objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payment_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Proposal_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Enter a date to be used with the Relative filters. For example, enter TODAY’s date and then select THIS WEEK in the Relative Due Date field to filter and retrieve all Payables that are due up to 2 weeks from today.</inlineHelpText>
    <label>Payment Proposal Date</label>
    <type>Date</type>
</CustomField>