objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Payment_Proposal_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Proposal_Line_Count__c</fullName>
    <label>Payment Proposal Line Count</label>
    <summaryForeignKey>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Payment_Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>