objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Posting_Status__c</fullName>
    <inlineHelpText>Select any Posting Status to filter and retrieve Payables, however note, the Posting Status on a Payable must be “Posted” to be eligible for payment.</inlineHelpText>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
                <default>true</default>
                <label>Posted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>