objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Proprietary_Payable_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Proprietary_Payable_Number__c</fullName>
    <label>Proprietary Payable Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>