objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Relative_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Relative_Due_Date__c</fullName>
    <defaultValue>&quot;THIS WEEK&quot;</defaultValue>
    <inlineHelpText>Based on the Payment Proposal Date, select a Relative Due Date by which to filter and retrieve Payables.</inlineHelpText>
    <label>Relative Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Relative_Date</valueSetName>
    </valueSet>
</CustomField>