objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Relative_Early_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Relative_Early_Pay_Date__c</fullName>
    <inlineHelpText>Based on the Payment Proposal Date, select a Relative Early Pay Date by which to filter and retrieve Payables.</inlineHelpText>
    <label>Relative Early Pay Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Relative_Date</valueSetName>
    </valueSet>
</CustomField>