objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Relative_Early_Pay_Date_Number_n__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Relative_Early_Pay_Date_Number_n__c</fullName>
    <label>Relative Early Pay Date Number (n)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>