objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Relative_Issue_Date_Number_n__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Relative_Issue_Date_Number_n__c</fullName>
    <inlineHelpText>If the Relative Issue Date requires “n”, enter the number here.</inlineHelpText>
    <label>Relative Issue Date Number (n)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>