objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Report_Filters__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Report_Filters__c</fullName>
    <label>Report Filters</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>