objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Report_Folder__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Report_Folder__c</fullName>
    <label>Report Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>