objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Report_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Report_Name__c</fullName>
    <inlineHelpText>The unique  DeveloperName of the report providing Payable information for this Payment Proposal.</inlineHelpText>
    <label>Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>