objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Search_for_Payables_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Search_for_Payables_to_Pay__c</fullName>
    <formula>&apos;Enter payment details on the Details tab, click on the Search tab to search for Payables to add, and then click on either Submit for Approval or Pay&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search for Payables to Pay</label>
    <type>Text</type>
</CustomField>