objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total__c</fullName>
    <formula>AcctSeed__Total_Payables_Applied__c + AcctSeed__Total_Credit_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>