objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Total_Credit_Applied__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total_Credit_Applied__c</fullName>
    <inlineHelpText>Total amount from Vendor Credit Memos applied</inlineHelpText>
    <label>Credit Memos Total</label>
    <summarizedField>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Is_Credit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Is_Parent__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Payment_Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>