objects/AcctSeed__Payment_Proposal__c/fields/AcctSeed__Total_Processed__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total_Processed__c</fullName>
    <label>Total Processed</label>
    <summaryFilterItems>
        <field>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Payment_Proposal_Line__c.AcctSeed__Payment_Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>