objects/AcctSeed__Payment_Proposal__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Description__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>